--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,8 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
+        {% for item in site.data.menu %}
+          <a class="page-link" href="{{ item.url }}">{{ item.text }}</a>
         {% endfor %}
       </div>
     </nav>
