--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         <ul>
           {% for item in site.data.menu %}
           <li>
-            <a class="page-link" href="{{ item.url }}">{{ item.text }}</a>
+            <a class="page-link" href="{{ item.url | prepend: site.baseurl }}">{{ item.text }}</a>
           </li>
           {% endfor %}
         </ul>
