--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,54 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-79497091-1', 'auto');
+  ga('send', 'pageview');
+
+  /* Track outbound links in Google Analytics */
+  //https://www.sitepoint.com/track-outbound-links-google-analytics/
+  (function($) {
+
+    "use strict";
+
+    // current page host
+    var baseURI = window.location.host;
+
+    // click event on body
+    $("body").on("click", function(e) {
+
+      // abandon if link already aborted or analytics is not available
+      if (e.isDefaultPrevented() || typeof ga !== "function") return;
+
+      // abandon if no active link or link within domain
+      var link = $(e.target).closest("a");
+      if (link.length != 1 || baseURI == link[0].host) return;
+
+      // cancel event and record outbound link
+      e.preventDefault();
+      var href = link[0].href;
+      ga('send', {
+        'hitType': 'event',
+        'eventCategory': 'outbound',
+        'eventAction': 'link',
+        'eventLabel': href,
+        'hitCallback': loadPage
+      });
+
+      // redirect after one second if recording takes too long
+      setTimeout(loadPage, 1000);
+
+      // redirect to outbound page
+      function loadPage() {
+        document.location = href;
+      }
+
+    });
+
+  })(jQuery); // pass another library here if required
+
+</script>
