--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,17 @@
         {% include header.html %}
       </div>
       <div class="row">
-        <div class="col-sm-3">
+        <div class="col-sm-4">
           {% include menu.html %}
         </div>
-        <div class="col-sm-9">
-        {{ content }}
+        <div class="col-sm-8">
+          <p>
+            <span class="post-title">
+              {{ page.title }}
+            </span>
+          </p>
+          {{ page.breadcrumbs }}
+          {{ content }}
         </div>
       </div>
 
