--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <span class="site-title">National Treasury - <a  href="{{ site.baseurl }}/">{{ site.title }}</a></span>
 
   </div>
 
