Link page title to original

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <div class="col-sm-8">
           <p>
             <span class="post-title">
-              {{ page.title }}
+              <a href="{{ page.original_url }}">{{ page.title }}</a>
             </span>
           </p>
           {{ page.breadcrumbs }}
