--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,11 @@
       .navbar-nav>li { float: none; }
     </style>
     <link rel="icon" href="/images/buttonMenu.gif">
+
+    <meta property="og:title" content="{{ site.title }} {{ page.title }}" />
+    <meta property="og:type" content="text/html" />
+    <meta property="og:description" content="{{ site.description }}" />
+    <meta property="og:url" content="https://mfmamirror.github.io/" />
+    <meta property="og:image" content="http://mfma.treasury.gov.za/images/NTHeader.jpg" />
+    <meta name="description" content="{{ site.description }}">
 </head>
