bigger image for facebook

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,6 @@
     <meta property="og:type" content="text/html" />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:url" content="https://mfmamirror.github.io/" />
-    <meta property="og:image" content="https://mfmamirror.github.io/images/NTLogo2.jpg" />
+    <meta property="og:image" content="https://mfmamirror.github.io/images/national_treasury.jpg" />
     <meta name="description" content="{{ site.description }}">
 </head>
