--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="/images/buttonMenu.gif">
 
     <meta property="og:title" content="{{ site.title }} {{ page.title }}" />
-    <meta property="og:type" content="text/html" />
+    <meta property="og:type" content="website" />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:url" content="https://mfmamirror.github.io/" />
     <meta property="og:image" content="https://mfmamirror.github.io/images/national_treasury.jpg" />
