tidier stupid og title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
     </style>
     <link rel="icon" href="/images/buttonMenu.gif">
 
-    <meta property="og:title" content="{{ site.title }} {{ page.title }}" />
+    <meta property="og:title" content="{{ site.title }} - {{ page.title }}" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="{{ site.description }}" />
     <meta property="og:url" content="https://mfmamirror.github.io/" />
