Make site description more prominent and explicit

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,8 @@
 <header class="site-header">
+  <span class="site-title">National Treasury - <a  href="{{ site.baseurl }}/">{{ site.title }}</a></span>
 
-  <div class="wrapper">
-
-    <span class="site-title">National Treasury - <a  href="{{ site.baseurl }}/">{{ site.title }}</a></span>
-
+  <div class="footer-col  col-sm-12">
+    <p >{{ site.description }}</p>
   </div>
 
 </header>
