--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,15 @@
           {% endif %}
         </span>
       </div>
-
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <form id="searchform">
+        <div class="form-group">
+          <input class="search-query form-control" placeholder="Search" type="text" name="query" />
+        </div>
+      </form>
     </div>
   </div>
 </header>
