Add google custom search for free text search in all documents

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,4 +20,20 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-sm-12">
+      <script>
+        (function() {
+        var cx = '012480388910726892059:tz_iurjw4eo';
+        var gcse = document.createElement('script');
+        gcse.type = 'text/javascript';
+        gcse.async = true;
+        gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(gcse, s);
+        })();
+      </script>
+      <gcse:search></gcse:search>
+    </div>
+  </div>
 </header>
