Add links to useful sites

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-12">
       <div class="alert alert-warning" role="alert">
-        <span style="display: inline-block"><strong>Unofficial MFMA mirror</strong></span>
+        <span style="display: inline-block"><strong>Unofficial MFMA mirror and third party guide</strong></span>
         <span style="overflow-wrap: break-word">
           View the original at
           {% if page.original_url %}
