--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,15 @@
         <div class="col-sm-4">
           {% include menu.html %}
         </div>
+        <a href="https://wazimap.co.za/" class="btn btn-default">
+          Demographics <i class="glyphicon glyphicon-new-window"></i>
+        </a>
+        <a href="https://municipalmoney.gov.za/" class="btn btn-default">
+          Financial Performance <i class="glyphicon glyphicon-new-window"></i>
+        </a>
+        <a href="https://municipaldata.treasury.gov.za/table/capital/?year=2017&municipalities=BUF%2CNMA&amountType=ORGB" class="btn btn-default">
+          Financial Data <i class="glyphicon glyphicon-new-window"></i>
+        </a>
         <div class="col-sm-8">
           <p>
             <span class="post-title">
