Clarify who these contact details are for

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,8 +15,8 @@ ga('send', 'pageview');
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
+    <h2 class="footer-heading">Unofficial mirror</h2>
+    <h3>Contact the maintainer of this mirror</h3>
     <div class="footer-col-wrapper">
       <div class="footer-col  col-sm-3">
         Email:
